--- a/src/styles/pages/cam.scss
+++ b/src/styles/pages/cam.scss
@@ -19,7 +19,7 @@
 		width: 100%;
 		
 		background-image: url("../assets/flat.jpeg");
-		background-position: center;
+		background-position: 0 center;
 		background-repeat: no-repeat;
 		
 		touch-action: none;
@@ -33,7 +33,8 @@
 		
 		height: 50px;
 		width: 260px;
-		border: 2px solid #000;
+		border: 1px solid map_get($colors, dark);
+		border-radius: 10px;
 		
 		background-image: url("../assets/flat.jpeg");
 		background-position: 0 center;
