added brightness control

--- a/src/templates/pages/index/components/cam-view/cam-view.pug
+++ b/src/templates/pages/index/components/cam-view/cam-view.pug
@@ -4,7 +4,7 @@
 			.camera-view__current-view
 		.camera-view__mini-map
 	.camera-view__controls
-		input(type="range").camera-view__brightness-control
+		input(type="range" min="0" max="100" value="100").camera-view__brightness-control
 
 		.camera-view__zoom-container
 			span.camera-view__label Масштаб:
